k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-challenge
  namespace: devops-challenge
spec:
  selector:
    app: devops-challenge
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
